--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,10 @@
     "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.0",
     "react": "^18.2.0",
-    "react-carousel": "^4.3.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
     "react-switch": "^7.0.0",
     "redux": "^4.2.1"
